--- a/hoa5.html
+++ b/hoa5.html
@@ -2,23 +2,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram Style</title>
+    <title>Petals & Persona</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="hoa5.css">
 </head>
 <header class="header">
-    <a href="index.html" class="logo">SEAWITHIN.</a>
+    <a href="index.html" class="logo">
+        <img src="seawithin.png" alt="SEAWITHIN Logo"></a>
     <nav class="navbar">
         <ul class="nav-list">
-            <li><a href="index.html #home">Home</a></li>
+            <li><a href="index.html#home">Home</a></li>
+            <li><a href="index.html#about">About</a></li>
             <li><a href="hoa5.html">KMW</a></li>
             <li><a href="orm.html">Petals & Persona</a></li>
-            <li><a href="index.html #about">About</a></li>
+            <li><a href="#index.html#portfolio">Portfolio</a></li>
         </ul>
     </nav>
 </header>
 <body>
-    <h1>Know Me Well</h1>
+    <h1>Know Me Well <br> 🪶🪶🪶</h1>
+    
 
     <div class="container" id="image-grid">
         <div class="box">
