--- a/orm.html
+++ b/orm.html
@@ -4,24 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="orm.css">
-    <title>Petals & Persona</title>
+    <title>Know Me Well</title>
 </head>
 
 <header class="header">
-    <a href="index.html" class="logo">SEAWITHIN.</a>
+    <a href="index.html" class="logo">
+        <img src="seawithin.png" alt="SEAWITHIN Logo"></a>
     <nav class="navbar">
         <ul class="nav-list">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#home">Home</a></li>
+            <li><a href="index.html#about">About</a></li>
             <li><a href="hoa5.html">KMW</a></li>
             <li><a href="orm.html">Petals & Persona</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="index.html#portfolio">Portfolio</a></li>
+            
+            
         </ul>
     </nav>
 </header>
 
 <body>
     <header>
-        <h1>Petals & Persona</h1>
+        <h1>꧁Petals & Persona꧂ <br>🪶🪶🪶</h1>
         <div id="search-container">
             <input type="text" id="search" placeholder="Search...">
             <button id="view-data-btn">View Data</button>
