--- a/index.html
+++ b/index.html
@@ -132,33 +132,33 @@
     <h3>Pre-Test</h3>
     <p>Before starting the activity, I took a pretest to check what I already knew about the topic. It helped me see which parts I understood and which ones I needed to learn more about. The pretest also prepared me for the lesson by making me think ahead and focus on important points.</p>
     <div class="scroll-container">
-        <img src="images/pretest1 2_17.jpg" alt="1">
-        <img src="images/Pretest1.jpg" alt="2">
-        <img src="images/CU4 PRETEST 2-24.jpg" alt="3">
-        <img src="images/cu5 pretest.jpg" alt="4">
-        <img src="images/cu5 pretest.jpg" alt="5">
+        <img src="pretest1 2_17.jpg" alt="1">
+        <img src="Pretest1.jpg" alt="2">
+        <img src="CU4 PRETEST 2-24.jpg" alt="3">
+        <img src="cu5 pretest.jpg" alt="4">
+        <img src="cu5 pretest.jpg" alt="5">
     </div>
 
     <h3>Post-Test</h3>
     <p>After completing the activity, I took a post-test to measure what I learned. It showed how much I improved compared to the pretest and helped me understand which parts I really understood well. The post-test also made me feel more confident about the topic because I was able to apply what I learned.</p>
     <div class="scroll-container">
-        <img src="images/post test1 2_17.jpg" alt="Cinque Terre">
-        <img src="images/CU4 POST TEST 2-24.jpg" alt="Forest">
-        <img src="images/post test 310.jpg" alt="Northern Lights">
-        <img src="images/post test cu6.jpg" alt="Mountains">
-        <img src="images/cu6 post test 3-17.jpg" alt="Mountains">
+        <img src="post test1 2_17.jpg" alt="Cinque Terre">
+        <img src="CU4 POST TEST 2-24.jpg" alt="Forest">
+        <img src="post test 310.jpg" alt="Northern Lights">
+        <img src="post test cu6.jpg" alt="Mountains">
+        <img src="cu6 post test 3-17.jpg" alt="Mountains">
     </div>
 
     <h3>Unit Output</h3>
     <p>The unit output is the final task that shows what I have learned and understood from the lessons. It combines all the knowledge and skills I gained throughout the unit and allows me to apply them in one complete project.</p>
     <div class="scroll-container">
-        <img src="images/UO1.jpg" alt="uo1">
-        <img src="images/UO2.jpg" alt="uo2">
-        <img src="images/UO3.jpg" alt="uo3">
-        <img src="images/UO4.jpg" alt="uo4">
-        <img src="images/UO4_1.jpg" alt="uo41">
-        <img src="images/UO5.jpg" alt="uo5">
-        <img src="images/UO5_1.jpg" alt="uo51">
+        <img src="UO1.jpg" alt="uo1">
+        <img src="UO2.jpg" alt="uo2">
+        <img src="UO3.jpg" alt="uo3">
+        <img src="UO4.jpg" alt="uo4">
+        <img src="UO4_1.jpg" alt="uo41">
+        <img src="UO5.jpg" alt="uo5">
+        <img src="UO5_1.jpg" alt="uo51">
     </div>
     
 
