--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
     <p>"Sea Within" Website Wireframe – Short Description (Beige Theme):
         A serene and minimalist website layout designed with a soft beige color palette, evoking sand, seashells, and coastal tranquility. The wireframe flows smoothly from section to section, using gentle curves and subtle textures to mirror the ocean’s calm. </p>
     <div class="scroll-container">
-        <img src="images/S1.jpg" alt="uo1">
-        <img src="images/S2.jpg" alt="uo2">
-        <img src="images/S3.jpg" alt="uo3">
-        <img src="images/S4.jpg" alt="uo4">
-        <img src="images/S5.jpg" alt="uo41">
+        <img src="S1.jpg" alt="uo1">
+        <img src="S2.jpg" alt="uo2">
+        <img src="S3.jpg" alt="uo3">
+        <img src="S4.jpg" alt="uo4">
+        <img src="S5.jpg" alt="uo41">
     </div>
        
     <script src="index.js" defer></script>
